Add Holo skin to SeekerBar in Video Player and Music Track player
The seeker bar wasn't being skinned to the holo theme, so needed to manually
set this up.   Good write up on how to do this can be found at:

http://stackoverflow.com/questions/16163215/android-styling-seek-bar

--- a/serenity-app/res/layout-large-v18/serenity_media_controller.xml
+++ b/serenity-app/res/layout-large-v18/serenity_media_controller.xml
@@ -80,10 +80,12 @@
         <SeekBar
             android:id="@+id/mediacontroller_seekbar"
             android:layout_width="500dp"
-            android:layout_height="15dp"
+            android:layout_height="30dp"
             android:focusable="true"
             android:max="1000"
             android:minWidth="500dp"
+            android:progressDrawable="@drawable/scrubber_progress_holo"
+            android:thumb="@drawable/seekerbar_selector"
             android:nextFocusDown="@+id/mediacontroller_play_pause" />
 
         <TextView
