Add option to enable or disable scrolling Animation in Movie and Episodes.
Enabled by default this allows the views to scroll left or right when
being navigated.  Otherwise dpad animation won't occur.

--- a/serenity-app/res/xml/preferences.xml
+++ b/serenity-app/res/xml/preferences.xml
@@ -72,6 +72,12 @@
             android:key="animation_shrink_posters"
             android:summary="@string/emphasize_poster_summary"
             android:title="@string/poster_selected_emphasis" />
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="animation_gallery_scrolling"
+            android:summary="@string/enable_gallery_scrolling"
+            android:title="@string/enable_gallery_scrolling_animation" />
+        
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/media_player" >
         <CheckBoxPreference
