Adjust unselected alpha level on movies and episodes

--- a/serenity-app/res/layout-large/activity_movie_browser.xml
+++ b/serenity-app/res/layout-large/activity_movie_browser.xml
@@ -291,7 +291,9 @@
             android:id="@+id/moviePosterGallery"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:spacing="25dp" >
+            android:spacing="25dp"
+            
+             >
 
             <requestFocus />
         </us.nineworlds.serenity.widgets.SerenityGallery>
