Set version to 1.3.7, fix flashing main menu animation.

--- a/serenity-app/res/anim/fade_in.xml
+++ b/serenity-app/res/anim/fade_in.xml
@@ -4,8 +4,9 @@
     <alpha
         android:duration="1000"
         android:fromAlpha="0.0"
-        android:interpolator="@android:anim/linear_interpolator"
-        android:repeatCount="1"
-        android:toAlpha="1.0" />
+        android:interpolator="@android:anim/decelerate_interpolator"
+        android:repeatCount="0"
+        android:toAlpha="1.0"
+         />
 
 </set>
