--- a/serenity-app/res/layout-large/menu_drawer.xml
+++ b/serenity-app/res/layout-large/menu_drawer.xml
@@ -6,12 +6,13 @@
  >
     
     <TextView android:id="@+id/menu_title"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/app_label"
         android:textColor="@android:color/white"
         android:gravity="center_vertical"
         android:drawablePadding="5dp"
+        android:background="@android:color/background_dark"
         android:drawableLeft="@drawable/serenity_bonsai_logo_small"
         />
  
