--- a/serenity-app/res/layout-large/activity_movie_browser.xml
+++ b/serenity-app/res/layout-large/activity_movie_browser.xml
@@ -3,15 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/movieBrowserBackgroundLayout"
     android:layout_width="fill_parent"
-    android:layout_height="match_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:padding="5dp"
     tools:context=".ui.browser.movie.MovieBrowserActivity" >
 
     <ImageView
         android:id="@+id/fanArt"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="fill_parent"
+        android:scaleType="fitXY" />
 
     <LinearLayout
         android:id="@+id/metaDataRow"
