--- a/serenity-app/res/layout-large/activity_movie_browser_gridview.xml
+++ b/serenity-app/res/layout-large/activity_movie_browser_gridview.xml
@@ -19,12 +19,22 @@
         android:background="#80000000"
         android:orientation="horizontal" >
 
+        <ImageButton android:id="@+id/menu_button"
+        android:layout_width="wrap_content"
+        android:paddingRight="10dp"
+        android:paddingLeft="5dp"
+        android:layout_height="28dp"
+        android:background="@android:color/transparent"
+        android:src="@drawable/menudrawer_selector"
+        android:layout_gravity="center_vertical"
+        android:scaleType="fitXY"
+        />
+        
         <TextView
             android:id="@+id/movieCategoryName"
             style="@android:style/TextAppearance.Holo.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
             android:focusable="false"
             android:text="@string/category" />
 
