Issue #135: Menu Options in the List should not navigate left and right
Fixes nextFocusRight and nextFocusLeft to restrict where they can go.

--- a/serenity-app/res/layout-large/activity_movie_browser_gridview.xml
+++ b/serenity-app/res/layout-large/activity_movie_browser_gridview.xml
@@ -113,6 +113,9 @@
         app:scrollDirectionLandscape="horizontal"
         app:scrollDirectionPortrait="vertical"
         app:stretchMode="spacingWidthUniform"
-        app:verticalSpacing="10dp" />
+        app:verticalSpacing="10dp"
+        android:nextFocusDown="@+id/movieGridView"
+        android:nextFocusLeft="@+id/movieGridView"
+        android:nextFocusRight="@+id/movieGridView" />
 
 </RelativeLayout>
