Additional navigation tweaks for Issue #135

--- a/serenity-app/res/layout-large/menu_drawer.xml
+++ b/serenity-app/res/layout-large/menu_drawer.xml
@@ -106,6 +106,8 @@
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:nextFocusUp="@+id/menu_list_options"
+            android:nextFocusRight="@+id/menu_help_text"
+            android:nextFocusLeft="@+id/menu_help_text"
             android:clickable="true"
              />
     </LinearLayout>
@@ -134,6 +136,8 @@
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:nextFocusUp="@+id/menu_options"
+            android:nextFocusRight="@+id/menu_settings_text"
+            android:nextFocusLeft="@+id/menu_settings_text"
             android:clickable="true"
              />
         
