General UI clean up for D-PAD navigation and Sliding Menu, and Internationalization
This solidifies the D-PAD navigation on those screens that have a sliding menu.
Also extracts the new strings and provides French and Spanish translations.

--- a/serenity-app/res/layout-large/activity_movie_browser.xml
+++ b/serenity-app/res/layout-large/activity_movie_browser.xml
@@ -33,6 +33,7 @@
         android:layout_gravity="center_vertical"
         android:scaleType="fitXY"
         android:nextFocusLeft="@+id/menu_button"
+        android:nextFocusUp="@+id/menu_button"
         android:nextFocusDown="@+id/moviePosterGallery"
         />
         
