--- a/serenity-app/res/layout-large/activity_movie_browser.xml
+++ b/serenity-app/res/layout-large/activity_movie_browser.xml
@@ -4,8 +4,7 @@
     android:id="@+id/movieBrowserBackgroundLayout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"
-    tools:context=".ui.browser.movie.MovieBrowserActivity" >
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/fanArt"
@@ -124,7 +123,7 @@
     <LinearLayout
         android:id="@+id/video_details"
         android:layout_width="200dp"
-        android:layout_height="180dp"
+        android:layout_height="200dp"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/episodeTVSeriesTitle"
         android:layout_centerHorizontal="true"
@@ -181,7 +180,7 @@
     <LinearLayout
         android:id="@+id/video_details_2"
         android:layout_width="200dp"
-        android:layout_height="180dp"
+        android:layout_height="200dp"
         android:layout_below="@+id/episodeTVSeriesTitle"
         android:layout_toRightOf="@+id/video_details"
         android:background="#80000000"
@@ -238,7 +237,7 @@
     <LinearLayout
         android:id="@+id/video_summary_row"
         android:layout_width="fill_parent"
-        android:layout_height="150.5dp"
+        android:layout_height="150dp"
         android:layout_below="@+id/video_title_row"
         android:layout_marginRight="6dp"
         android:layout_toRightOf="@+id/video_details_2"
@@ -248,12 +247,13 @@
 
         <TextView
             android:id="@+id/movieSummary"
-            style="@android:style/TextAppearance.Holo.Medium"
+            android:textSize="17.5sp"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
-            android:lines="8"
-            android:maxLines="8"
+            android:lines="7"
+            android:maxLines="7"
+            android:ellipsize="marquee"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:textColor="#F0F0F0"
@@ -264,7 +264,7 @@
         android:id="@+id/movieInfoGraphicLayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/video_details"
+        android:layout_below="@+id/video_summary_row"
         android:layout_centerHorizontal="true"
         android:layout_marginRight="10dp"
         android:background="#80000000"
