--- a/serenity-app/res/layout-large/activity_movie_browser.xml
+++ b/serenity-app/res/layout-large/activity_movie_browser.xml
@@ -4,7 +4,7 @@
     android:id="@+id/movieBrowserBackgroundLayout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:orientation="vertical" >
 
     <ImageView
         android:id="@+id/fanArt"
@@ -19,32 +19,30 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginRight="10dp"
-        android:background="#80000000"
+        android:background="#AA000000"
         android:orientation="horizontal" >
 
-        <ImageButton android:id="@+id/menu_button"
-        android:layout_width="wrap_content"
-        android:paddingRight="10dp"
-        android:paddingLeft="5dp"
-        android:layout_height="28dp"
-        android:background="@android:color/transparent"
-        android:src="@drawable/menudrawer_selector"
-        android:layout_gravity="center_vertical"
-        android:scaleType="fitXY"
-        android:nextFocusLeft="@+id/menu_button"
-        android:nextFocusUp="@+id/menu_button"
-        android:nextFocusDown="@+id/moviePosterGallery"
-        />
-        
+        <ImageButton
+            android:id="@+id/menu_button"
+            android:layout_width="wrap_content"
+            android:layout_height="28dp"
+            android:layout_gravity="center_vertical"
+            android:background="@android:color/transparent"
+            android:nextFocusDown="@+id/moviePosterGallery"
+            android:nextFocusLeft="@+id/menu_button"
+            android:nextFocusUp="@+id/menu_button"
+            android:paddingLeft="5dp"
+            android:paddingRight="10dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/menudrawer_selector" />
+
         <TextView
             android:id="@+id/movieCategoryName"
             style="@android:style/TextAppearance.Holo.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:focusable="false"
-            android:text="@string/category"
-            
-         />
+            android:text="@string/category" />
 
         <Spinner
             android:id="@+id/movieCategoryFilter"
@@ -54,12 +52,11 @@
             android:background="@drawable/spinner_background"
             android:focusable="true"
             android:gravity="left"
-            android:prompt="@string/movie_category_prompt"
-            android:spinnerMode="dropdown"
             android:nextFocusDown="@+id/moviePosterGallery"
             android:nextFocusLeft="@+id/menu_button"
             android:nextFocusRight="@+id/movieCategoryFilter2"
-             />
+            android:prompt="@string/movie_category_prompt"
+            android:spinnerMode="dropdown" />
 
         <Spinner
             android:id="@+id/movieCategoryFilter2"
@@ -81,8 +78,7 @@
             android:layout_marginLeft="10dp"
             android:focusable="false"
             android:text="Subtitle"
-            android:visibility="gone"
-         />
+            android:visibility="gone" />
 
         <Spinner
             android:id="@+id/videoSubtitle"
@@ -97,200 +93,86 @@
             android:visibility="gone" />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/video_title_row"
+
+    <RelativeLayout
+        android:id="@+id/video_details_container"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="10dp"
+        android:padding="10dp"
         android:layout_below="@+id/episodeTVSeriesTitle"
-        android:layout_marginRight="6dp"
-        android:layout_toRightOf="@+id/video_details_2"
-        android:background="#80000000"
-        android:orientation="horizontal" >
+        android:background="#AA000000" >
+
+        <ImageView
+            android:id="@+id/video_poster"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true" />
 
         <TextView
             android:id="@+id/movieBrowserPosterTitle"
             style="@android:style/TextAppearance.Holo.Large"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_toRightOf="@+id/video_poster"
             android:gravity="left|center_vertical"
             android:paddingLeft="10dp"
             android:textColor="#F0F0F0"
             android:textStyle="bold"
             tools:ignore="SelectableText" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/video_details"
-        android:layout_width="200dp"
-        android:layout_height="194dp"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/episodeTVSeriesTitle"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="4.5dp"
-        android:background="#80000000"
-        android:orientation="vertical"
-        android:paddingBottom="5dp" >
-
-        <TextView
-            style="@android:style/TextAppearance.Holo.Medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:minWidth="50dp"
-            android:text="@string/year"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/video_year"
-            style="@android:style/TextAppearance.Holo.Medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:gravity="left"
-            android:lines="2"
-            android:minWidth="50dp"
-            tools:ignore="SelectableText" />
-
-        <TextView
-            style="@android:style/TextAppearance.Holo.Medium"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:minWidth="100dp"
-            android:text="@string/genre"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/video_genre"
-            style="@android:style/TextAppearance.Holo.Medium"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:gravity="left"
-            android:lines="5"
-            android:minWidth="100dp"
-            tools:ignore="SelectableText" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/video_details_2"
-        android:layout_width="200dp"
-        android:layout_height="194dp"
-        android:layout_below="@+id/episodeTVSeriesTitle"
-        android:layout_toRightOf="@+id/video_details"
-        android:background="#80000000"
-        android:orientation="vertical"
-        android:paddingBottom="5dp" >
-
-        <TextView
-            style="@android:style/TextAppearance.Holo.Medium"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:minWidth="50dp"
-            android:text="@string/writers"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/video_writers"
-            style="@android:style/TextAppearance.Holo.Medium"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:gravity="left"
-            android:lines="2"
-            android:minWidth="50dp"
-            tools:ignore="SelectableText" />
-
-        <TextView
-            style="@android:style/TextAppearance.Holo.Medium"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:minWidth="50dp"
-            android:text="@string/directors"
-            android:textStyle="bold"
-            tools:ignore="NewApi" />
-
-        <TextView
-            android:id="@+id/video_directors"
-            style="@android:style/TextAppearance.Holo.Medium"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:gravity="left"
-            android:lines="4"
-            android:maxLines="4"
-            android:minWidth="50dp"
-            tools:ignore="SelectableText" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/video_summary_row"
-        android:layout_width="fill_parent"
-        android:layout_height="150dp"
-        android:layout_below="@+id/video_title_row"
-        android:layout_marginRight="6dp"
-        android:layout_toRightOf="@+id/video_details_2"
-        android:background="#80000000"
-        android:orientation="horizontal"
-        android:paddingBottom="5dp" >
 
         <TextView
             android:id="@+id/movieSummary"
-            android:textSize="17.5sp"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:lines="7"
-            android:maxLines="7"
+            android:layout_below="@+id/movieBrowserPosterTitle"
+            android:layout_toRightOf="@+id/video_poster"
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="15dp"
             android:ellipsize="marquee"
+            android:maxLines="8"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:textColor="#F0F0F0"
+            android:textSize="17.5sp"
             tools:ignore="SelectableText" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/movieInfoGraphicLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/video_summary_row"
-        android:layout_centerHorizontal="true"
-        android:layout_marginRight="10dp"
-        android:background="#80000000"
-        android:orientation="horizontal" >
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/videoSelectedExtra"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/tableRow2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginRight="10dp"
-        android:orientation="horizontal" >
-
+        
         <TextView
             android:id="@+id/videoTextExtra"
             style="@android:style/TextAppearance.Holo.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="#D0000000"
-            android:gravity="center"
+            android:layout_gravity="left"
+            android:layout_toRightOf="@+id/video_poster"
+            android:layout_above="@+id/movieInfoGraphicLayout"
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="15dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:gravity="left"
             android:textStyle="bold"
             android:visibility="invisible" />
-    </LinearLayout>
+        
+
+        <LinearLayout
+            android:id="@+id/movieInfoGraphicLayout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/video_poster"
+            android:layout_toRightOf="@+id/video_poster"
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="15dp"
+            android:gravity="bottom"
+            android:layout_centerHorizontal="true"
+            android:orientation="horizontal" >
+        </LinearLayout>
+    </RelativeLayout>
+
 
     <LinearLayout
         android:id="@+id/tableRow2"
@@ -309,9 +191,8 @@
             android:id="@+id/moviePosterGallery"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:spacing="25dp"
-            android:nextFocusUp="@+id/menu_button" 
-             >
+            android:nextFocusUp="@+id/menu_button"
+            android:spacing="25dp" >
 
             <requestFocus />
         </us.nineworlds.serenity.widgets.SerenityGallery>
@@ -322,10 +203,10 @@
         style="@android:style/TextAppearance.Holo.Large"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_below="@+id/metaDataRow"
-        android:layout_marginLeft="10dip"
-        android:layout_marginRight="10dp"
-        android:background="#80000000"
+        android:layout_marginLeft="10dp"
+        android:background="#AA000000"
         android:gravity="center"
         android:textStyle="bold"
         android:visibility="gone" />
